--- a/src/views/pages/main.ejs
+++ b/src/views/pages/main.ejs
@@ -63,7 +63,7 @@
         </div>-->
         <div class="widget-stage">
           <%include ./logo.ejs%>
-          <div id="carosel" style="width:600px;height:400px;margin-left:23%">
+          <div id="carosel" style="width:100%">
             <div id="powerpoint" class="carousel slide" data-ride="carousel">
 
               <!-- Indicators -->
@@ -71,39 +71,47 @@
                 <li data-target="#powerpoint" data-slide-to="0" class="active"></li>
                 <li data-target="#powerpoint" data-slide-to="1"></li>
                 <li data-target="#powerpoint" data-slide-to="2"></li>
+                <li data-target="#powerpoint" data-slide-to="3"></li>
+                <li data-target="#powerpoint" data-slide-to="4"></li>
+                <li data-target="#powerpoint" data-slide-to="5"></li>
+                <li data-target="#powerpoint" data-slide-to="6"></li>
+                <li data-target="#powerpoint" data-slide-to="7"></li>
+                <li data-target="#powerpoint" data-slide-to="8"></li>
+                <li data-target="#powerpoint" data-slide-to="9"></li>
+                <li data-target="#powerpoint" data-slide-to="10"></li>
               </ul>
 
               <!-- The slideshow -->
               <div class="carousel-inner">
                 <div class="carousel-item active">
-                  <img style="max-width:600px;max-height:450px" src="/img/ppt/Slide1.jpg" alt="Slide #1">
+                  <img style="max-width:100%;max-height:450px" src="/img/ppt/Slide1.jpg" alt="Slide #1">
                 </div>
                 <div class="carousel-item">
-                  <img style="max-width:600px;max-height:450px" src="/img/ppt/Slide2.jpg" alt="Slide #2">
+                  <img style="max-width:100%;max-height:450px" src="/img/ppt/Slide2.jpg" alt="Slide #2">
                 </div>
                 <div class="carousel-item">
-                  <img style="max-width:600px;max-height:450px" src="/img/ppt/Slide3.jpg" alt="Slide #3">
+                  <img style="max-width:100%;max-height:450px" src="/img/ppt/Slide3.jpg" alt="Slide #3">
                 </div>
                 <div class="carousel-item">
-                  <img style="max-width:600px;max-height:450px" src="/img/ppt/Slide4.jpg" alt="Slide #4">
+                  <img style="max-width:100%;max-height:450px" src="/img/ppt/Slide4.jpg" alt="Slide #4">
                 </div>
                 <div class="carousel-item">
-                  <img style="max-width:600px;max-height:450px" src="/img/ppt/Slide5.jpg" alt="Slide #5">
+                  <img style="max-width:100%;max-height:450px" src="/img/ppt/Slide5.jpg" alt="Slide #5">
                 </div>
                 <div class="carousel-item">
-                  <img style="max-width:600px;max-height:450px" src="/img/ppt/Slide6.jpg" alt="Slide #6">
+                  <img style="max-width:100%;max-height:450px" src="/img/ppt/Slide6.jpg" alt="Slide #6">
                 </div>
                 <div class="carousel-item">
-                  <img style="max-width:600px;max-height:450px" src="/img/ppt/Slide7.jpg" alt="Slide #7">
+                  <img style="max-width:100%;max-height:450px" src="/img/ppt/Slide7.jpg" alt="Slide #7">
                 </div>
                 <div class="carousel-item">
-                  <img style="max-width:600px;max-height:450px" src="/img/ppt/Slide8.jpg" alt="Slide #8">
+                  <img style="max-width:100%;max-height:450px" src="/img/ppt/Slide8.jpg" alt="Slide #8">
                 </div>
                 <div class="carousel-item">
-                  <img style="max-width:600px;max-height:450px" src="/img/ppt/Slide9.jpg" alt="Slide #9">
+                  <img style="max-width:100%;max-height:450px" src="/img/ppt/Slide9.jpg" alt="Slide #9">
                 </div>
                 <div class="carousel-item">
-                  <img style="max-width:600px;max-height:450px" src="/img/ppt/Slide10.jpg" alt="Slide #10">
+                  <img style="max-width:100%;max-height:450px" src="/img/ppt/Slide10.jpg" alt="Slide #10">
                 </div>
               </div>
 
